--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Личный проект «Кексобукинг» от HTML Academy",
   "repository": {
     "type": "git",
-    "url": "git@github.com:htmlacademy-javascript/1447201-keksobooking-22.git"
+    "url": "git+ssh://git@github.com/htmlacademy-javascript/1447201-keksobooking-22.git"
   },
   "bugs": {
     "url": "https://github.com/htmlacademy-javascript/1447201-keksobooking-22/issues"
@@ -23,5 +23,12 @@
   },
   "engines": {
     "node": ">=12.0.0"
-  }
+  },
+  "homepage": "https://github.com/htmlacademy-javascript/1447201-keksobooking-22#readme",
+  "main": "index.js",
+  "keywords": [
+    "More",
+    "details"
+  ],
+  "author": "mrDWise"
 }
